chrome/skin/classic/verticaltoolbar/overlay.css
/* ::::: autohide ::::: */

#vertical-toolbox[autohide] {
	min-width: 1px;
}

#vertical-toolbox[autohide] > toolbar {
	visibility: collapse;
}

#vertical-toolbox[autohide]:hover > toolbar,
#vertical-toolbox[autohide][dragover] > toolbar,
#vertical-toolbox[autohide][sidesync] > toolbar {
	visibility: visible;
}

#vertical-toolbox[autohide]:not([sidesync]) {
	position: fixed;
}

#vertical-toolbox[placement="left"][autohide]:not([sidesync]) {
	left: 0px;
}

#vertical-toolbox[placement="right"][autohide]:not([sidesync]) {
	right: 0px;
}

/* ::::: animate ::::: */

#vertical-toolbox[animate]:not([sidesync]) > toolbar {
	visibility: visible;
	-moz-transition-property: margin-left, margin-right;
	-moz-transition-duration: 0.3s;
	-moz-transition-timing-function: ease-in;
}

#vertical-toolbox[animate]:hover > toolbar,
#vertical-toolbox[animate][dragover] > toolbar,
#vertical-toolbox[animate][sidesync] > toolbar {
	margin-left : 0px !important;
	margin-right: 0px !important;
	-moz-transition-timing-function: ease-out;
}

/* ::::: toolbar items ::::: */

/* ensure the toolbar is visible even if it has no buttons while customizing */
#vertical-toolbar[customizing="true"] {
	min-width: 19px;
}

#vertical-toolbar .toolbarbutton-1 {
	margin: 2px;
}

#vertical-toolbar toolbarspacer {
	height: 15px;
}

#vertical-toolbar[defaulttheme="Mac"] toolbarspacer {
	min-height: 32px;
}

#vertical-toolbar[defaulttheme="Win"] toolbarseparator {
	-moz-appearance: none !important;
	margin: 0.2em 2px;
	border-bottom: 1px solid ThreeDHighlight;
	border-top: 1px solid ThreeDShadow;
	height: 2px;
	border-left: none;
	border-right: none;
}

#vertical-toolbar[defaulttheme="Mac"] toolbarseparator {
	-moz-appearance: none;
	margin: 4px 3px;
	background: url("chrome://verticaltoolbar/skin/toolbar-separator-vertical.png") transparent repeat-x;
	padding: 0;
	height: 1px !important;
	min-height: 1px !important;
}

#vertical-toolbar :-moz-any(toolbaritem, toolbarpaletteitem) > * {
	-moz-box-flex: 1;
}

#vertical-toolbar[defaulttheme="Mac"] .toolbarpaletteitem-box[type="spacer"],
#vertical-toolbar[defaulttheme="Mac"] .toolbarpaletteitem-box[type="spring"] {
	width: auto;
	margin-top: 0;
}

#vertical-toolbar[defaulttheme="Mac"] .toolbarpaletteitem-box[type="spacer"]:not(:-moz-window-inactive),
#vertical-toolbar[defaulttheme="Mac"] .toolbarpaletteitem-box[type="spring"]:not(:-moz-window-inactive) {
	border: 1px solid rgba(59, 59, 59, 0.9);
}

/* ::::: Bookmarks Toolbar Items ::::: */

#vertical-toolbar #PlacesToolbarItems {
	-moz-box-orient: vertical;
}

#vertical-toolbar #PlacesToolbarItems .toolbarbutton-text {
	text-align: start;
}

#vertical-toolbar #PlacesToolbar > hbox, 
#vertical-toolbar #PlacesToolbar > hbox > hbox {
	-moz-box-orient: vertical;
	-moz-box-align: start;
}

#vertical-toolbar[mode="icons"] #PlacesToolbar > hbox {
	-moz-box-align: center;
}

#vertical-toolbar #PlacesToolbar > hbox > hbox {
	/* hbox should have the same height as the inside drop indicator */
	/* this also becomes an unnecessary drop area */
	height: 2px;
}

#vertical-toolbar #PlacesToolbarDropIndicator {
	list-style-image: none;
	background-color: Highlight;
	width: 50px;
	height: 2px;
	-moz-margin-start: 5px !important;
}

#vertical-toolbar[mode="icons"] #PlacesToolbarDropIndicator {
	width: 20px;
	-moz-margin-start: 2px !important;
}

#vertical-toolbar #PlacesToolbar toolbarbutton {
	/* remove the margin area to disable dropping on it */
	margin: 0 !important;
}

#vertical-toolbar #PlacesChevron, 
#vertical-toolbar #bookmarks-menu-button {
	display: none;
}

#vertical-toolbar[mode="icons"] #PlacesToolbar toolbarbutton {
	padding: 4px !important;
}

#vertical-toolbar[mode="icons"] #PlacesToolbar .toolbarbutton-icon {
	margin: 2px;
}

#vertical-toolbar[mode="icons"] #PlacesToolbar .toolbarbutton-text, 
#vertical-toolbar[mode="icons"] #PlacesToolbar .toolbarbutton-menu-dropmarker {
	display: none !important;
}

/* ::::: drag and drop feedback ::::: */

#vertical-toolbar toolbarpaletteitem {
	margin-top: -2px;
	margin-bottom: -2px;
	border-top: 2px solid transparent;
	border-bottom: 2px solid transparent;
	border-left-color: transparent;
	border-right-color: transparent;
}

#vertical-toolbar toolbarpaletteitem[dragover="left"] {
	border-top-color: black;
}

#vertical-toolbar toolbarpaletteitem[dragover="right"] {
	border-bottom-color: black;
}

/* ::::: flat button ::::: */

#vertical-toolbar[defaulttheme="Win"][flatbutton="true"] .toolbarbutton-1:not([checked="true"]) {
	background: none !important;
	border-color: transparent !important;
	-moz-box-shadow: 0 0 0 1px transparent inset,
	                 0 0 0 2px transparent inset,
	                 0 1px 0 transparent !important;
}

#vertical-toolbar[defaulttheme="Mac"][flatbutton="true"] .toolbarbutton-1:not([checked="true"]) {
	-moz-appearance: none !important;
}

#vertical-toolbar[defaulttheme="Mac"]:not([mode="icons"]):not([flatbutton="true"]) .toolbarbutton-1 {
	-moz-appearance: none !important;
	border: 1px solid rgb(75,75,75) !important;
	border-radius: 4px/4px !important;
	background: -moz-linear-gradient(top, rgb(255,255,255), rgb(180,180,180));
}

#vertical-toolbar[defaulttheme="Mac"]:not([mode="icons"]):not([flatbutton="true"]) .toolbarbutton-1:not([disabled="true"]):active {
	box-shadow: inset 0px 1px 4px 0px rgb(30,30,30);
	background: -moz-linear-gradient(top, rgb(120,120,120), rgb(150,150,150)) !important;
}

#vertical-toolbar[defaulttheme="Mac"]:not([mode="icons"]):not([flatbutton="true"]) .toolbarbutton-1[checked="true"] {
	box-shadow: inset 0px 1px 4px 0px rgb(30,30,30);
	background: -moz-linear-gradient(top, rgb(90,90,90), rgb(120,120,120)) !important;
}

#vertical-toolbar[defaulttheme="Lin"]:not([flatbutton="true"]) .toolbarbutton-1 {
	-moz-appearance: none !important;
	border-color: ThreeDLightShadow !important;
	border-radius: 4px/4px !important;
}

#vertical-toolbar[defaulttheme="Lin"]:not([flatbutton="true"]) .toolbarbutton-1:not([disabled="true"]):hover,
#vertical-toolbar[defaulttheme="Lin"]:not([flatbutton="true"]) .toolbarbutton-1:not([disabled="true"]):active,
#vertical-toolbar[defaulttheme="Lin"]:not([flatbutton="true"]) .toolbarbutton-1[checked="true"] {
	border-color: ThreeDShadow !important;
	background-color: -moz-buttonhoverface !important;
}

/* ::::: unified buttons ::::: */

#vertical-toolbar :-moz-any(#unified-back-forward-button, #zoom-controls) {
	-moz-box-orient: vertical;
}

#vertical-toolbar #zoom-controls {
	-moz-box-direction: reverse;
}

#vertical-toolbar[defaulttheme="Win"] :-moz-any(#unified-back-forward-button, #zoom-controls) .toolbarbutton-1 {
	border-width: 1px;
	-moz-border-start: 1px solid rgba(0, 0, 0, 0.19);
}

#vertical-toolbar[defaulttheme="Win"] :-moz-any(#back-button, #zoom-in-button) {
	margin-bottom: 1px;
	border-bottom: 0;
	border-radius: 4.5px 4.5px 0 0;
}

#vertical-toolbar[defaulttheme="Win"] :-moz-any(#forward-button, #zoom-out-button) {
	margin-top: 0;
	border-top: 0;
	border-radius: 0 0 4.5px 4.5px;
}

#vertical-toolbar[defaulttheme="Mac"][mode="icons"] #back-button,
#vertical-toolbar[defaulttheme="Mac"][mode="icons"] #zoom-in-button {
	border: 1px solid rgba(59, 59, 59, 0.9);
	border-radius: 3px 3px 0 0;
	margin: 2px 2px 0 2px;
}

#vertical-toolbar[defaulttheme="Mac"][mode="icons"] #forward-button,
#vertical-toolbar[defaulttheme="Mac"][mode="icons"] #zoom-out-button {
	border-top: none;
	border-radius: 0 0 3px 3px;
	margin: 0 2px 2px 2px;
}

#vertical-toolbar[defaulttheme="Mac"][mode="icons"] #back-button:-moz-window-inactive,
#vertical-toolbar[defaulttheme="Mac"][mode="icons"] #zoom-in-button:-moz-window-inactive {
	border-color: rgba(146, 146, 146, 0.84);
}

/* ::::: additional buttons ::::: */

toolbarbutton[id^="verticaltoolbar-"] .toolbarbutton-icon {
	margin: 0 !important;
	width: auto !important;
	height: auto !important;
}

toolbarbutton[id^="verticaltoolbar-"] {
	list-style-image: url("chrome://verticaltoolbar/skin/toolbar.png") !important;
}

#verticaltoolbar-addons-button {
	-moz-image-region: rect(0px, 18px, 18px, 0px);
}

#verticaltoolbar-error-console-button {
	-moz-image-region: rect(0px, 36px, 18px, 18px);
}

#verticaltoolbar-web-console-button {
	-moz-image-region: rect(0px, 54px, 18px, 36px);
}

#verticaltoolbar-page-info-button {
	-moz-image-region: rect(0px, 72px, 18px, 54px);
}

#verticaltoolbar-view-source-button {
	-moz-image-region: rect(0px, 90px, 18px, 72px);
}

#verticaltoolbar-save-page-button {
	-moz-image-region: rect(0px, 108px, 18px, 90px);
}

#verticaltoolbar-send-link-button {
	-moz-image-region: rect(0px, 126px, 18px, 108px);
}

#verticaltoolbar-offline-button:not([checked="true"]) {
	-moz-image-region: rect(0px, 144px, 18px, 126px);
}

#verticaltoolbar-offline-button {
	-moz-image-region: rect(0px, 162px, 18px, 144px);
}

#verticaltoolbar-private-browsing-button {
	-moz-image-region: rect(0px, 180px, 18px, 162px);
}

#verticaltoolbar-inspect-button {
	-moz-image-region: rect(0px, 198px, 18px, 180px);
}

#verticaltoolbar-print-preview-button {
	-moz-image-region: rect(0px, 216px, 18px, 198px);
}

#verticaltoolbar-button {
	-moz-image-region: rect(0px, 234px, 18px, 216px);
}

